[package]
name = "jankwrapper"
description = "A wrapper around JankClient featuring autoupdating off a webhook"
publish = false
version = "0.1.0"

edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = "0.12.1"
sha2 = "0.10"
hex = "0.4.3"
subtle = "2.6.1"